[package]
name = "ninja-pets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rand = "0.8.5"
futures = "0.3.21"
futures-util = "0.3"
async-trait = "0.1.56"
async-std = { version = "1.10.0", features = ["attributes"] }
ethers = { version = "0.13.0" }
eth-keystore = "0.4.1"
two-party-adaptor = {path = "../two-party-adaptor"}
curv-kzen = { version = "0.9", default-features = false }
htlp = { path = "../HTLP"}
hex = "0.4"

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
backoff = {version = "0.4.0", features = ["tokio"]}


serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
surf = "2.3.2"

eyre = "0.6.8"
tracing = "0.1.29"
cli-batteries = "0.4.0"
clap = { version = "4.0.18", features = ["derive"] }
strum = {version = "0.24", features = ["derive"] }



gumdrop = "0.8"
inquire = { version = "0.2.1" }
chrono = "0.4.19"

url = "2"

[build-dependencies]
cli-batteries = "0.4"
