[package]
name = "spy-pets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.56"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.19"
clap = { version = "4.0.18", features = ["derive"] }
cli-batteries = "0.4.0"
curv-kzen = { version = "0.9", default-features = false }
duration-string = "0.1.1"
eth-keystore = "0.5.0"
ethers = "1.0.1"
eyre = "0.6.8"
futures = "0.3.21"
futures-util = "0.3"
gumdrop = "0.8"
hex = "0.4"
inquire = { version = "0.2.1" }
itertools = "0.10.5"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
humantime = "2.1.0"
surf = "2.3.2"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.29"
uniswap-rs = "0.1.0"
url = "2"
two-party-adaptor = { git = "https://github.com/timoth-y/two-party-adaptor" }
htlp = { git = "https://github.com/timoth-y/HTLP" }
tlock = { git = "https://github.com/timoth-y/tlock-rs" }

[build-dependencies]
cli-batteries = "0.4"

[patch.crates-io]
curv-kzen = { git = "https://github.com/ZenGo-X/curv", rev = "665cc11d1c56ea8d9d2ead67e3671a084ba4503c" }
